[gd_scene load_steps=2 format=3 uid="uid://placeholder_battle"]

[ext_resource type="Script" path="res://scenes/battle/BattleScene.gd" id="1"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="WaveInfoLabel" type="Label" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wave 1 / 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoardArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.06
anchor_right = 0.95
anchor_bottom = 0.92
grow_horizontal = 2
grow_vertical = 2

[node name="BottomBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
alignment = 2

[node name="SpeedButton" type="Button" parent="BottomBar/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "1x"
